[package]
name = "cnproc"
version = "0.1.0"
authors = ["Yoandy Rodriguez Martinez <yoandy.rmartinez@gmail.com>"]
edition = "2018"
description =" A Rust API to access the Linux Process Events Connector via netlink sockets"
readme = "README.md"
homepage = "github.com/yorodm/cnproc-rs"
license = "MIT"
categories =["os","api-bindings"]
keywords = ["linux", "netlink"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
libc = "0.2"
